--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon"  href="/src/assets/blob-haikei (1).svg" />
+		<link rel="icon" href="/src/assets/blob-haikei (1).svg" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Raleway:wght@400;900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap"
 			rel="stylesheet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>YemDev</title>
